RESOLVED FIXED193499
MediaPlayerPrivateAVFoundationObjC can return incorrect paused information
https://bugs.webkit.org/show_bug.cgi?id=193499
Summary MediaPlayerPrivateAVFoundationObjC can return incorrect paused information
Jer Noble
Reported 2019-01-16 11:00:11 PST
MediaPlayerPrivateAVFoundationObjC can return incorrect paused information
Attachments
Patch (6.55 KB, patch)
2019-01-16 11:04 PST, Jer Noble
no flags
Patch (6.69 KB, patch)
2019-01-16 11:06 PST, Jer Noble
no flags
Patch for landing (7.37 KB, patch)
2019-01-16 14:11 PST, Jer Noble
no flags
Archive of layout-test-results from ews101 for mac-highsierra (2.50 MB, application/zip)
2019-01-16 15:16 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-highsierra-wk2 (2.75 MB, application/zip)
2019-01-16 15:30 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-highsierra (2.06 MB, application/zip)
2019-01-16 16:08 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (41.14 MB, application/zip)
2019-01-16 16:24 PST, EWS Watchlist
no flags
Patch for landing (7.96 KB, patch)
2019-01-17 09:34 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-01-16 11:04:20 PST
Jer Noble
Comment 2 2019-01-16 11:06:24 PST
Eric Carlson
Comment 3 2019-01-16 12:33:17 PST
Comment on attachment 359282 [details] Patch r=me once the bots are happy.
Jer Noble
Comment 4 2019-01-16 14:11:18 PST
Created attachment 359308 [details] Patch for landing
EWS Watchlist
Comment 5 2019-01-16 15:16:12 PST
Comment on attachment 359308 [details] Patch for landing Attachment 359308 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/10776375 New failing tests: media/video-loop.html media/video-seek-past-end-playing.html media/video-played-collapse.html media/modern-media-controls/seek-backward-support/seek-backward-support.html
EWS Watchlist
Comment 6 2019-01-16 15:16:14 PST
Created attachment 359321 [details] Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 7 2019-01-16 15:30:29 PST
Comment on attachment 359308 [details] Patch for landing Attachment 359308 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10776402 New failing tests: media/video-loop.html media/video-seek-past-end-playing.html media/video-ended-event-negative-playback.html
EWS Watchlist
Comment 8 2019-01-16 15:30:31 PST
Created attachment 359324 [details] Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9 2019-01-16 16:08:49 PST
Comment on attachment 359308 [details] Patch for landing Attachment 359308 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/10776602 New failing tests: media/video-loop.html media/video-seek-past-end-playing.html media/video-played-collapse.html media/video-ended-event-negative-playback.html media/modern-media-controls/seek-backward-support/seek-backward-support.html
EWS Watchlist
Comment 10 2019-01-16 16:08:50 PST
Created attachment 359332 [details] Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 11 2019-01-16 16:23:56 PST
Comment on attachment 359308 [details] Patch for landing Attachment 359308 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10776496 New failing tests: media/video-seek-with-negative-playback.html media/video-seek-past-end-playing.html media/video-loop.html media/video-played-collapse.html media/video-ended-event-negative-playback.html
EWS Watchlist
Comment 12 2019-01-16 16:24:09 PST
Created attachment 359333 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Jer Noble
Comment 13 2019-01-17 09:34:37 PST
Created attachment 359384 [details] Patch for landing
WebKit Commit Bot
Comment 14 2019-01-17 12:24:15 PST
Comment on attachment 359384 [details] Patch for landing Clearing flags on attachment: 359384 Committed r240123: <https://trac.webkit.org/changeset/240123>
WebKit Commit Bot
Comment 15 2019-01-17 12:24:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 16 2019-01-17 12:25:38 PST
Note You need to log in before you can comment on or make changes to this bug.